--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "tailwindcss": "^4.1.0"
   },
   "devDependencies": {
+    "prettier": "3.5.3",
     "sass-embedded": "^1.86.1"
   },
   "pnpm": {
