--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "tailwindcss": "^4.1.0"
   },
   "devDependencies": {
-    "prettier": "3.5.3",
+    "prettier": "^3.5.3",
+    "prettier-plugin-astro": "^0.14.1",
     "sass-embedded": "^1.86.1"
   },
   "pnpm": {
